# aurona

./: README.md  pyproject.toml
src/aurona/: __init__.py  config.py  logger.py  main.py
src/aurona/im/weixin_oc/: common.py  login.py  receive.py  send.py
src/aurona/provider/: openai.py
