[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "aurona"
dependencies = []
requires-python = ">=3.13"
dynamic = ["version"]

[project.scripts]
aurona = "aurona.main:main"

[tool.hatch.version]
path = "src/aurona/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aurona"]
