[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "aurona"
dependencies = ["openai>=2.44.0", "rich>=15.0.0", "black>=26.5.1"]
requires-python = ">=3.13"
dynamic = ["version"]

[project.scripts]
aurona = "aurona.main:main"

[tool.hatch.version]
path = "src/aurona/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/aurona"]

[tool.black]
target-version = ["py314"]

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"